--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=b6057691be640b5ef975",
-    "/css/app.css": "/css/app.css?id=f5a3a661f6a6866a4650"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
